<resources>

    <!-- Application label -->
    <string name="app_name">Context Logger</string>
    <!-- Activity label -->
    <string name="title_activity_main">Context Logger</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Button text -->
    <string name="button_on">ON</string>
    <string name="button_off">OFF</string>
    <string name="button_settings">Settings</string>
    <string name="button_time">Set Time</string>
    <string name="button_data_usage">Clear</string>
    <!-- Constant strings -->
    <string name="default_data_threshold">500</string>
    <string name="data_unit">MB</string>
    <string name="date_format">y/MM/dd (E) a hh</string>
    <string name="silent_mode">true</string><string name="button_sendlog">UPLOAD</string>
    <string name="disabled">DISABLED</string>
    <string name="requesting_permission">로깅을 위해 필요한 권한을 요청합니다.</string>
    <string name="requested_permission">권한을 획득하였습니다.</string>
    <string name="restart_msg">잠시 후, 앱이 재시작됩니다.</string>
    <string name="permissionHasNotBeenGranted">로깅을 위해 필요한 권한을 확인하지 못하였습니다.</string>
    <string name="permissionHasBeenGranted">로깅을 위해 필요한 권한이 확인되었습니다.</string>



</resources>