<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_weight="1.01"
        android:layout_width="96dp"
        android:layout_height="114dp"
        android:contentDescription="@string/title_activity_main"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/start_message"
        android:layout_weight="1.67"
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:gravity="center"
		android:textSize="35sp"
        android:text="@string/app_name"
        android:textStyle="bold"/>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_weight="0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onToggled"
        android:textOn="@string/button_on"
        android:textOff="@string/button_off"
        android:checked="false"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_weight="1.60"
        android:layout_width="fill_parent"
        android:layout_height="53dp" />

    <Button
            android:id="@+id/uploadButton"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/button_sendlog"
            android:onClick="onClickSendButton"
            android:textStyle="bold"
            android:textSize="30dp"/>


</LinearLayout>